[package]
name = "common-types"
description = "Common types used throughout the codebase"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
rlp = { path = "../../util/rlp" }
rlp_derive = { path = "../../util/rlp_derive" }
ethbloom = "0.2"
ethcore-bytes = { path = "../../util/bytes" }
ethcore-util = { path = "../../util" }
ethcore-bigint = { path = "../../util/bigint" }
ethjson = { path = "../../json" }
hash = { path = "../../util/hash" }
heapsize = "0.4"
rustc-hex = "1.0"

[dev-dependencies]
rustc-hex= "1.0"
